     time.

 - briefly documented bsexlsprod.pl (site/docs/bse_import.pod)

 - bsexlsprod.pl can now update article tags

 - bsexlsprod.pl can now update tiered pricing

 - make the eimage variable available on the admin/image_edit template
   and use it to display a thumbnail.
   https://rt4.develop-help.com/Ticket/Display.html?id=1290

Templates:

 - admin/order_detail.tmpl - the product tag now uses tag_article as
   it should.

 - admin/subscr/list - isubscription is now an object tag, giving
   access to the is_removable method
   https://rt4.develop-help.com/Ticket/Display.html?id=1323

 - admin/subscr/edit, admin/subscr/detail - subscription is now an
   object tag

BSE 0.21 - 07 Mar 2012
========

 - Squirrel::Template has largely been rewritten performing a parsing
   then a processing step rather than doing many, many s/// over the
   template text.

 - verbose output of generate.pl is now based on the template
   admin/generate.tmpl

 - add the referer tag to all dynamic pages

 - added [undeletable articles] to bse.cfg as a supplement to
   @NO_DELETE.  @NO_DELETE is now deprecated and may be removed in a
   future release of BSE.
   https://rt4.develop-help.com/Ticket/Display.html?id=1209

 - iterator inlines can now be filtered (Adrian Oldham)

 - added some more extension to content type mappings for video
   formats (Adrian Oldham)

 - the shopadmin order list targets are now much more efficient - they
   no longer load the entire order table, are paginated, and let the
   data do the selection of matching records.

   NOTE: this removes some backward compatibility - iterator filters
   no longer work and a new tag, all_order_count can be used to fetch
   order counts.  Extra search parameters have been provided to filter
   the results.

 - added a new adminurl2 tag where the second parameter is a target.

 - siteusers.pl now flashes all success messages, and success message
   text is fetched from the messages table
